# build-my-own-git

./: .gitignore  Cargo.toml  README.md  your_program.sh
.codecrafters/: run.sh
src/: commands.rs  main.rs  utils.rs
