[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"     # error handling
bytes = "1.9.0"       # helps manage buffers
flate2 = "1.0.35"     # compression
thiserror = "2.0.3"   # error handling
log = "0.4.22"        # logging
env_logger = "0.11.5" # logging
sha1 = "0.10.0"       # hashing
